# CG-project

./: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake
src/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  box_2_3.3d  build.ninja  cmake_install.cmake  engine.cpp  engineMaterials.cpp  engineMaterials.h  generator.cpp  geometricShapes.cpp  geometricShapes.h  group_project  materials.cpp  materials.h  parseXML.cpp  parseXML.h  parseXml.cpp  ring_1_2_50_3.3d  sphere_1_20_20.3d  splines.cpp  splines.h
src/.cmake/api/v1/reply/: cache-v2-ebae3425444484ed157c.json  cmakeFiles-v1-32f8b27ccfd3877f978f.json  codemodel-v2-abe971f40ee75fed3250.json  directory-_deps.tinyxml2-build-e79e2cf28048355bc646.json  index-2023-04-17T00-46-13-0560.json  target-Continuous-e50787e2a7467e9f5dc3.json  target-ContinuousBuild-14216836eb0459b71f7f.json  target-ContinuousConfigure-e6a4d6afbf72626d86c0.json  target-ContinuousCoverage-2cdb10642445d4ee6a64.json  target-ContinuousMemCheck-5f689d904abb9f041f11.json  target-ContinuousStart-ca32993005a2ef1c3055.json  target-ContinuousSubmit-ee1c8ea8e8b89a11c056.json  target-ContinuousTest-ca43de004f1237b32f71.json  target-ContinuousUpdate-bf632516397cf8813289.json  target-Experimental-57cefc263165196f5780.json  target-ExperimentalBuild-9561f543c87b003f6201.json  target-ExperimentalConfigure-eb6292b57af58a5d3716.json  target-ExperimentalCoverage-ad7eede0d0a943a07abe.json  target-ExperimentalMemCheck-7bf5732bcef7f5bf02f7.json  target-ExperimentalStart-b02c2cc31a9aa858f464.json  target-ExperimentalSubmit-f5c58a2f1796789b426a.json  target-ExperimentalTest-b11c9ad9a44a0c791846.json  target-ExperimentalUpdate-a1b619247ea2e1ef2ffb.json  target-Nightly-d157588de1949f915444.json  target-NightlyBuild-9d1496ab930c0af5f6a8.json  target-NightlyConfigure-d12ec695153450c0db32.json  target-NightlyCoverage-8096bb922e3ee9e3ba75.json  target-NightlyMemCheck-74fbfda69c1298a8b333.json  target-NightlyMemoryCheck-9955f595ab9eae6a5578.json  target-tinyxml2-310a89ae4339079387e6.json  (+6 more)
src/Testing/: sphere_1_20_20.3d
src/config/: config.xml
src/geometricShapes/: box.cpp  cone.cpp  geometricShapes.cpp  geometricShapes.h  plane.cpp  ring.cpp  sphere.cpp
src/shape_files/: orbit_5.3d  sphere_1_20_20.3d
(+9 files in other folders)
